# triton-custom-backend-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENCE  Makefile  README.md  docker-compose.yml
example/app/: Cargo.toml
example/app/src/: main.rs  request.rs
example/custom-backend/: Cargo.toml
example/custom-backend/src/: lib.rs
models/mnist/: config.pbtxt
models/mnist_onnx/: config.pbtxt
proto/: grpc_service.proto  health.proto  model_config.proto
triton-client/: Cargo.toml
triton-client/src/: lib.rs
triton-grpc-client/: Cargo.toml  build.rs
triton-grpc-client/src/: grpc.health.v1.rs  inference.rs  lib.rs
triton-ng/: Cargo.toml
triton-ng/src/: backend.rs  error.rs  request.rs  response.rs  response_allocator.rs  server.rs
triton-rs/: Cargo.toml
triton-rs/src/: backend.rs  inference_request.rs  inference_response.rs  lib.rs  macros.rs  model.rs  utils.rs
triton-sys/: Cargo.toml  build.rs
