[workspace]
resolver = "2"
members = [
    "triton-sys",
    "triton-client",
    "triton-grpc-client",
]

[workspace.dependencies]
triton-sys = { path = "triton-sys", version = "0.1.0" }
triton-client = { path = "triton-client", version = "0.1.0" }
triton-grpc-client = { path = "triton-grpc-client", version = "0.1.0" }
anyhow = { version = "1.0.100" }
bindgen = "0.72.1"
prost = { version = "0.14.1" }
tonic = { version = "0.14.2", features = ["gzip"] }
tonic-prost = { version = "0.14.2" }
tonic-prost-build = { version = "0.14.2" }